Finished creating FlaskAPI.

--- a/Price_Scraping/FlaskApp.ipynb
+++ b/Price_Scraping/FlaskApp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,117 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app = Flask(__name__)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
-    "api_key = os.getenv('SERPAPI_KEY')\n",
-    "client = serpapi.Client(api_key=api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = tf.keras.models.load_model(\"path_to_your_saved_model\")\n",
-    "\n",
-    "\n",
-    "class_map = {\n",
-    "    0: \"class_0\",\n",
-    "    1: \"class_1\",\n",
-    "    # Add more class mappings as needed\n",
-    "\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predictions(test_image_path):\n",
-    "    test_img = image.load_img(test_image_path, target_size=(224, 224))\n",
-    "    test_img_arr = image.img_to_array(test_img) / 255.0\n",
-    "    test_img_input = test_img_arr.reshape((1, test_img_arr.shape[0], test_img_arr.shape[1], test_img_arr.shape[2]))\n",
-    "    predicted_label = np.argmax(model.predict(test_img_input))\n",
-    "    predicted_product = class_map.get(predicted_label, \"Unknown\")\n",
-    "    return predicted_product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@app.route('/upload', methods=['POST'])\n",
-    "def upload_file():\n",
-    "    if 'image' not in request.files:\n",
-    "        return jsonify({\"error\": \"No image provided\"}), 400\n",
-    "    \n",
-    "    file = request.files['image']\n",
-    "    if file.filename == '':\n",
-    "        return jsonify({\"error\": \"No image selected\"}), 400\n",
-    "\n",
-    "    # Save the uploaded image\n",
-    "    image_path = os.path.join(\"uploads\", file.filename)\n",
-    "    file.save(image_path)\n",
-    "\n",
-    "    # Make predictions\n",
-    "    predicted_product = predictions(image_path)\n",
-    "\n",
-    "    # Scrape price information\n",
-    "    q_inf = predicted_product + \" grocery store\"\n",
-    "    results = client.search({\n",
-    "        'engine': 'google_shopping',\n",
-    "        'q': q_inf,\n",
-    "        'google_domain': 'google.ca',\n",
-    "        'gl': 'ca',\n",
-    "        'num': 20,\n",
-    "        'start': 1\n",
-    "    })\n",
-    "\n",
-    "    prices = [product['price'] for product in results['shopping_results']]\n",
-    "\n",
-    "    if prices:\n",
-    "        cheapest_price = min(prices)\n",
-    "    else:\n",
-    "        cheapest_price = \"N/A\"\n",
-    "\n",
-    "    response_data = {\n",
-    "        \"predicted_product\": predicted_product,\n",
-    "        \"cheapest_price\": cheapest_price\n",
-    "    }\n",
-    "\n",
-    "    return jsonify(response_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Found 3115 images belonging to 36 classes.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       " * Serving Flask app '__main__'\n",
-      " * Debug mode: on\n"
+      " * Debug mode: off\n"
      ]
     },
     {
@@ -136,31 +48,80 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
+      "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on http://127.0.0.1:5000\n",
       "Press CTRL+C to quit\n",
-      " * Restarting with stat\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "1",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\rashe\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3534: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "INFO:werkzeug:\u001b[33mPress CTRL+C to quit\u001b[0m\n",
+      "127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET / HTTP/1.1\" 200 -\n",
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:36] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [15/Apr/2024 02:05:57] \"GET / HTTP/1.1\" 200 -\n",
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:57] \"GET / HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
+    "import json\n",
+    "from flask import Flask\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, img_to_array, load_img\n",
+    "import os\n",
+    "import logging\n",
+    "\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "# Load dataset\n",
+    "train_path = \"C:/Users/rashe/ImageRecognitionProject/Groceries-Images-Recognition/ML/dataset/train\"\n",
+    "image_category = os.listdir(train_path)\n",
+    "\n",
+    "# Apply the suitable Image Preprocessing by using ImageDataGenerator\n",
+    "train_generator = ImageDataGenerator(rescale=1.0/255.0)\n",
+    "train_image_generator = train_generator.flow_from_directory(\n",
+    "    train_path,\n",
+    "    target_size=(224, 224),\n",
+    "    batch_size=32,\n",
+    "    class_mode='categorical'\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Load the trained model\n",
+    "model = tf.keras.models.load_model('C:/Users/rashe/ImageRecognitionProject/Groceries-Images-Recognition/ML/mymodel.h5')\n",
+    "\n",
+    "# Define the class map for label mapping\n",
+    "class_map = dict([v, k] for k, v in train_image_generator.class_indices.items())\n",
+    "\n",
+    "@app.route('/')\n",
+    "def index():\n",
+    "    return 'Image Recognition API'\n",
+    "\n",
+    "@app.route('/predict', methods=['POST'])\n",
+    "def predict():\n",
+    "    try:\n",
+    "        # Get the image from the POST request\n",
+    "        img_file = request.files['image']\n",
+    "        \n",
+    "        # Load and preprocess the image\n",
+    "        img = load_img(img_file, target_size=(224, 224))\n",
+    "        img_array = img_to_array(img) / 255.0\n",
+    "        img_input = img_array.reshape((1, img_array.shape[0], img_array.shape[1], img_array.shape[2]))\n",
+    "\n",
+    "        # Make prediction\n",
+    "        predicted_label = int(model.predict(img_input).argmax(axis=-1))\n",
+    "        predicted_img = class_map[predicted_label]\n",
+    "\n",
+    "        # Return the result\n",
+    "        return jsonify({\"predicted_product\": predicted_img})\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error during prediction: {e}\")\n",
+    "        return jsonify({\"error\": \"Failed to predict\"}), 500\n",
+    "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True)"
+    "    app.run(debug=False)"
    ]
   },
   {
