Finished creating flask app that integrates the ML modell.

--- a/Price_Scraping/FlaskApp.ipynb
+++ b/Price_Scraping/FlaskApp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,16 @@
     "import pandas as pd\n",
     "import tensorflow as tf\n",
     "from keras.preprocessing import image\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "import logging\n",
+    "from PIL import Image\n",
+    "import io"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -46,31 +50,59 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:5000\n",
       "INFO:werkzeug:\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n",
       "INFO:werkzeug:\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET / HTTP/1.1\" 200 -\n",
-      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [15/Apr/2024 02:05:36] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
-      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:36] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [15/Apr/2024 02:05:57] \"GET / HTTP/1.1\" 200 -\n",
-      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:05:57] \"GET / HTTP/1.1\" 200 -\n"
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:45:43] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image shape: (1, 224, 224, 3)\n",
+      "WARNING:tensorflow:5 out of the last 6 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001FB7E30DCF0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:5 out of the last 6 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x000001FB7E30DCF0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 686ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:45:48] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw predictions: [[9.8492730e-01 1.8479063e-10 8.9700916e-06 4.7654879e-08 3.0239292e-07\n",
+      "  2.0127224e-08 3.1799292e-08 6.2774512e-12 1.1077172e-08 8.5408560e-09\n",
+      "  3.3701291e-08 7.9225765e-07 3.6099341e-09 3.8940557e-09 9.0002157e-09\n",
+      "  2.7638310e-07 8.6515655e-08 4.9440119e-09 1.3748647e-06 3.2955990e-07\n",
+      "  1.0851540e-04 3.1491797e-06 3.2693848e-07 9.6849377e-05 2.9650164e-11\n",
+      "  4.1913681e-09 1.4667867e-02 2.0947542e-07 7.0310336e-05 1.0321035e-09\n",
+      "  1.4287204e-09 4.3175432e-09 1.9400037e-08 2.5251877e-05 7.7740326e-05\n",
+      "  1.0044303e-05]]\n",
+      "Predicted label index: 0\n",
+      "Class map: {0: 'apple', 1: 'banana', 2: 'beetroot', 3: 'bell pepper', 4: 'cabbage', 5: 'capsicum', 6: 'carrot', 7: 'cauliflower', 8: 'chilli pepper', 9: 'corn', 10: 'cucumber', 11: 'eggplant', 12: 'garlic', 13: 'ginger', 14: 'grapes', 15: 'jalepeno', 16: 'kiwi', 17: 'lemon', 18: 'lettuce', 19: 'mango', 20: 'onion', 21: 'orange', 22: 'paprika', 23: 'pear', 24: 'peas', 25: 'pineapple', 26: 'pomegranate', 27: 'potato', 28: 'raddish', 29: 'soy beans', 30: 'spinach', 31: 'sweetcorn', 32: 'sweetpotato', 33: 'tomato', 34: 'turnip', 35: 'watermelon'}\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "from flask import Flask\n",
-    "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator, img_to_array, load_img\n",
-    "import os\n",
-    "import logging\n",
-    "\n",
-    "\n",
     "app = Flask(__name__)\n",
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
@@ -87,7 +119,6 @@
     "    class_mode='categorical'\n",
     ")\n",
     "\n",
-    "\n",
     "# Load the trained model\n",
     "model = tf.keras.models.load_model('C:/Users/rashe/ImageRecognitionProject/Groceries-Images-Recognition/ML/mymodel.h5')\n",
     "\n",
@@ -98,19 +129,36 @@
     "def index():\n",
     "    return 'Image Recognition API'\n",
     "\n",
+    "\n",
     "@app.route('/predict', methods=['POST'])\n",
     "def predict():\n",
     "    try:\n",
     "        # Get the image from the POST request\n",
     "        img_file = request.files['image']\n",
     "        \n",
+    "        # Check if the file is an image\n",
+    "        if img_file.filename == '':\n",
+    "            return jsonify({\"error\": \"No image provided\"}), 400\n",
+    "        \n",
     "        # Load and preprocess the image\n",
-    "        img = load_img(img_file, target_size=(224, 224))\n",
+    "        img = Image.open(io.BytesIO(img_file.read()))\n",
+    "        img = img.resize((224, 224))  # Resize to match the model's input shape\n",
     "        img_array = img_to_array(img) / 255.0\n",
     "        img_input = img_array.reshape((1, img_array.shape[0], img_array.shape[1], img_array.shape[2]))\n",
     "\n",
+    "        # Debug: Print image shape\n",
+    "        print(\"Image shape:\", img_input.shape)\n",
+    "\n",
     "        # Make prediction\n",
-    "        predicted_label = int(model.predict(img_input).argmax(axis=-1))\n",
+    "        predictions = model.predict(img_input)\n",
+    "        print(\"Raw predictions:\", predictions)\n",
+    "\n",
+    "        predicted_label = int(predictions.argmax(axis=-1))\n",
+    "        print(\"Predicted label index:\", predicted_label)\n",
+    "        \n",
+    "        # Debug: Print class map\n",
+    "        print(\"Class map:\", class_map)\n",
+    "\n",
     "        predicted_img = class_map[predicted_label]\n",
     "\n",
     "        # Return the result\n",
