Added some changes in the flask app to run faster.

--- a/Price_Scraping/FlaskApp.ipynb
+++ b/Price_Scraping/FlaskApp.ipynb
@@ -98,6 +98,57 @@
       "  1.4287204e-09 4.3175432e-09 1.9400037e-08 2.5251877e-05 7.7740326e-05\n",
       "  1.0044303e-05]]\n",
       "Predicted label index: 0\n",
+      "Class map: {0: 'apple', 1: 'banana', 2: 'beetroot', 3: 'bell pepper', 4: 'cabbage', 5: 'capsicum', 6: 'carrot', 7: 'cauliflower', 8: 'chilli pepper', 9: 'corn', 10: 'cucumber', 11: 'eggplant', 12: 'garlic', 13: 'ginger', 14: 'grapes', 15: 'jalepeno', 16: 'kiwi', 17: 'lemon', 18: 'lettuce', 19: 'mango', 20: 'onion', 21: 'orange', 22: 'paprika', 23: 'pear', 24: 'peas', 25: 'pineapple', 26: 'pomegranate', 27: 'potato', 28: 'raddish', 29: 'soy beans', 30: 'spinach', 31: 'sweetcorn', 32: 'sweetpotato', 33: 'tomato', 34: 'turnip', 35: 'watermelon'}\n",
+      "Image shape: (1, 224, 224, 3)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 37ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:46:28] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw predictions: [[9.95722055e-01 2.20227765e-08 2.25473627e-07 4.47834100e-06\n",
+      "  5.05728082e-08 1.67722610e-05 6.42066595e-07 1.17764007e-10\n",
+      "  1.17139400e-07 1.59036091e-08 3.71736633e-08 7.33637280e-05\n",
+      "  6.69572731e-10 1.39673356e-10 5.31057731e-09 4.60568044e-05\n",
+      "  2.12793012e-07 1.02425616e-07 1.21585663e-05 3.10372712e-07\n",
+      "  2.73124315e-05 4.04245185e-07 1.39529384e-05 1.13390030e-04\n",
+      "  1.02468015e-07 3.84902599e-09 8.68248389e-06 8.47421067e-09\n",
+      "  1.75747991e-05 4.70692356e-08 1.54227759e-08 7.52083906e-08\n",
+      "  6.11076967e-09 3.94077692e-03 3.79283790e-07 5.61549882e-07]]\n",
+      "Predicted label index: 0\n",
+      "Class map: {0: 'apple', 1: 'banana', 2: 'beetroot', 3: 'bell pepper', 4: 'cabbage', 5: 'capsicum', 6: 'carrot', 7: 'cauliflower', 8: 'chilli pepper', 9: 'corn', 10: 'cucumber', 11: 'eggplant', 12: 'garlic', 13: 'ginger', 14: 'grapes', 15: 'jalepeno', 16: 'kiwi', 17: 'lemon', 18: 'lettuce', 19: 'mango', 20: 'onion', 21: 'orange', 22: 'paprika', 23: 'pear', 24: 'peas', 25: 'pineapple', 26: 'pomegranate', 27: 'potato', 28: 'raddish', 29: 'soy beans', 30: 'spinach', 31: 'sweetcorn', 32: 'sweetpotato', 33: 'tomato', 34: 'turnip', 35: 'watermelon'}\n",
+      "Image shape: (1, 224, 224, 3)\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 36ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:werkzeug:127.0.0.1 - - [15/Apr/2024 02:46:59] \"POST /predict HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw predictions: [[3.1546722e-03 1.0087010e-06 8.7882954e-01 4.8693331e-05 2.4598910e-08\n",
+      "  1.2764890e-03 7.7664270e-05 1.8789196e-07 1.3276942e-04 6.3770568e-07\n",
+      "  5.6502876e-07 2.9245156e-03 2.5193478e-06 2.2593399e-07 2.5216339e-06\n",
+      "  2.7361777e-05 5.5833522e-07 4.9199422e-09 6.3438830e-07 9.2461261e-05\n",
+      "  2.1373476e-03 2.0205252e-05 2.1297471e-03 8.9483353e-04 1.8857303e-07\n",
+      "  3.1357854e-06 2.8095173e-04 9.3185548e-07 6.3070878e-02 2.5681090e-06\n",
+      "  1.9515930e-06 1.5260702e-07 1.4901351e-06 4.3864708e-02 1.0165193e-03\n",
+      "  1.2838543e-06]]\n",
+      "Predicted label index: 2\n",
       "Class map: {0: 'apple', 1: 'banana', 2: 'beetroot', 3: 'bell pepper', 4: 'cabbage', 5: 'capsicum', 6: 'carrot', 7: 'cauliflower', 8: 'chilli pepper', 9: 'corn', 10: 'cucumber', 11: 'eggplant', 12: 'garlic', 13: 'ginger', 14: 'grapes', 15: 'jalepeno', 16: 'kiwi', 17: 'lemon', 18: 'lettuce', 19: 'mango', 20: 'onion', 21: 'orange', 22: 'paprika', 23: 'pear', 24: 'peas', 25: 'pineapple', 26: 'pomegranate', 27: 'potato', 28: 'raddish', 29: 'soy beans', 30: 'spinach', 31: 'sweetcorn', 32: 'sweetpotato', 33: 'tomato', 34: 'turnip', 35: 'watermelon'}\n"
      ]
     }
